fix panic code
