# back/docs/swagger.yaml
@@ -792,7 +792,36 @@ paths:
       summary: Create a new tombola
       tags:
       - tombola
-  /tombola/{id}:
+  /tombola/{tombola_id}/tickets:
+    get:
+      description: Récupère tous les tickets associés à une tombola spécifique.
+      parameters:
+      - description: Tombola ID
+        in: path
+        name: tombola_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Liste des tickets
+          schema:
+            items:
+              $ref: '#/definitions/models.Ticket'
+            type: array
+        "400":
+          description: ID de tombola invalide
+          schema:
+            type: string
+        "500":
+          description: Erreur lors de la récupération des tickets
+          schema:
+            type: string
+      summary: Récupérer tous les tickets pour une tombola
+      tags:
+      - Tickets
+  /tombola/delete/{id}:
     delete:
       description: Delete a specific tombola by its ID
       parameters:
@@ -827,6 +856,7 @@ paths:
       summary: Delete a tombola by ID
       tags:
       - tombola
+  /tombola/detail/{id}:
     get:
       description: Retrieve a tombola by its ID
       parameters:
@@ -859,35 +889,6 @@ paths:
       summary: Get tombola by ID
       tags:
       - tombola
-  /tombola/{tombola_id}/tickets:
-    get:
-      description: Récupère tous les tickets associés à une tombola spécifique.
-      parameters:
-      - description: Tombola ID
-        in: path
-        name: tombola_id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Liste des tickets
-          schema:
-            items:
-              $ref: '#/definitions/models.Ticket'
-            type: array
-        "400":
-          description: ID de tombola invalide
-          schema:
-            type: string
-        "500":
-          description: Erreur lors de la récupération des tickets
-          schema:
-            type: string
-      summary: Récupérer tous les tickets pour une tombola
-      tags:
-      - Tickets
   /transactions:
     get:
       consumes:
